Fix build for N0100 and legacy N0110

--- a/ion/src/device/bootloader/Makefile
+++ b/ion/src/device/bootloader/Makefile
@@ -3,6 +3,7 @@ ion_device_src += $(addprefix ion/src/device/bootloader/drivers/, \
   board.cpp \
   cache.cpp \
   external_flash_tramp.cpp \
+  storage.cpp \
   led.cpp \
   power.cpp \
   reset.cpp \
