--- a/.github/workflows/metric-workflow.yml
+++ b/.github/workflows/metric-workflow.yml
@@ -27,12 +27,12 @@ jobs:
         run: make -j2 -C head MODEL=n0110 epsilon.elf
       - name: Retrieve binary size analysis
         id: binary_size
-        run: echo "::set-output name=table::$(python3 head/build/metrics/binary_size.py base/output/release/device/n0110/epsilon.elf head/output/release/device/n0110/epsilon.elf --labels Base Head --sections .text .rodata .bss .data --custom 'Total (RAM)' .data .bss --custom 'Total (ROM)' .text .rodata .data --escape)"
+        run: echo "table=$(python3 head/build/metrics/binary_size.py base/output/release/device/n0110/epsilon.elf head/output/release/device/n0110/epsilon.elf --labels Base Head --sections .text .rodata .bss .data --custom 'Total (RAM)' .data .bss --custom 'Total (ROM)' .text .rodata .data --escape)" >> $GITHUB_OUTPUT
       - name: Add comment
         uses: actions/github-script@v7
         with:
           script: |
-            await github.issues.createComment({
+            await  github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.payload.pull_request.number,
