--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -304,6 +304,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+      # Install the Linux toolchin to avoid dependancies issues, but maybe only libpng is needed
+      - run: |
+          sudo apt update
+          sudo apt-get install build-essential imagemagick libfreetype6-dev libjpeg-dev libpng-dev pkg-config libxtst-dev
       - run: make -j2 PLATFORM=simulator TARGET=web
       - run: make -j2 PLATFORM=simulator TARGET=web test.js
       - run: node output/release/simulator/web/test.js --headless
